refactor EvaluateMowerCommandsService